package com.lthaoshao.pattern.delegate;

/**
 * <p>  </p>
 *
 * @author lthaoshao
 * @version V1.0
 * @date 2019/8/3 13:59
 */
public interface IEmployee {

    void doing(String command);
}
